De level transities gemaakt en de 2 levels gevuld met blokken. Als alle blokken in het eerste level weg zijn word het 2de level ingeladen. Ook de manier hoe de levelmanager weet welk level die moet inladen verandert zodat het iets simpelere is in gebruik.

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -60,7 +60,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\BrickScript.cs" />
+    <Compile Include="Assets\Scripts\BallScript.cs" />
+    <Compile Include="Assets\Scripts\BlockScript.cs" />
+    <Compile Include="Assets\Scripts\LevelManager.cs" />
     <Compile Include="Assets\Scripts\PlayerController.cs" />
     <Reference Include="Unity.TextMeshPro.Editor">
       <HintPath>D:/UnityProjects/BPW2/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
